src/style.css
@import url('https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&display=swap');
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  html {
    @apply bg-magnolia;
  }

  /* Chrome, Safari, Edge, Opera */
  input::-webkit-outer-spin-button,
  input::-webkit-inner-spin-button {
    -webkit-appearance: none;
    margin: 0;
  }

  /* Firefox */
  input[type='number'] {
    -moz-appearance: textfield;
  }
}

@layer components {
  .primary-input {
    @apply rounded-md h-10 w-full px-4 transition-all border border-light-gray outline-none focus-visible:border-purplish-blue;
  }

  .plan-card {
    @apply rounded-lg border cursor-pointer border-light-gray hover:border-purplish-blue transition-all;
  }

  .mobile-ui-card {
    @apply bg-white p-4 py-6 rounded-xl -mt-24 md:bg-transparent md:p-0 md:rounded-none md:mt-0;
  }
}

